syntax = "proto3";

package proto;

option go_package = "pkg/generatedProto";


service User {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc Whoami(WhoamiRequest) returns (WhoamiResponce) {}
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string response = 1;
}

message SignInRequest{
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}
message WhoamiRequest {
  string token = 1;
}
message WhoamiResponce {
  int64 userID = 1;
  string email = 2;
}

